<resources>
    <string name="app_name">RSSWatcher</string>
    <string name="app_name_space">RSS Watcher</string>
    <string name="share">Share</string>
    <string name="add_channel">Add RSS Channel</string>
    <string name="channel_name">Channel Name:</string>
    <string name="channel_url">RSS Feed URL:</string>
    <string name="new_channel">New Channel</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="delete_channel">Delete Channel</string>
    <string name="manage_filters">Manage Filters</string>
    <string name="add_filter">Add Filter</string>
    <string name="search">Search</string>
    <string name="dialog_delete_channel_message">Do you really want do delete channel and all its feeds?</string>
    <string name="dialog_add_channel_invalid_name">Name can not be empty.</string>
    <string name="dialog_add_channel_invalid_url">URL is invalid.</string>
    <string name="dialog_add_channel_invalid_url_exists">Channel with specified URL already exists.</string>
    <string name="dialog_add_filter_title">Add Filter</string>
    <string name="dialog_add_filter_query_text">Query Text:</string>
    <string name="dialog_add_filter_btn_update">Update</string>
    <string name="dialog_add_filter_invelid_query">Query can not be empty.</string>
    <string name="dialog_delete_filter_message">Do you really want to delete this filter?</string>
    <string name="no_channel_available">No channel available.</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="no_items_selected">No items selected.</string>
    <string name="dialog_delete_selected_feeds">Do you really want do delete all selected feeds?</string>
    <string name="dialog_archive_selected_feeds">Do you really want do archive all selected feeds?</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="archive_selected">Archive Selected</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="network_status_connected">Connected</string>
    <string name="network_status_connecting">Waiting for Network</string>
    <string name="network_status_disconnected">No Internet Connection</string>
    <string name="dialog_bad_link_title">Oops!</string>
    <string name="dialog_bad_link_message">This option is not available due to bad link.</string>
    <string name="error_message_parsing">Error occurred while parsing data</string>
    <string name="error_message_downloading">Error occurred while downloading</string>

    <!-- test ads -->
    <string name="ad_app_id">ca-app-pub-3940256099942544~6300978111</string>
    <string name="feed_detail_ad">ca-app-pub-3940256099942544/6300978111</string>

    <!--<string name="ad_app_id">ca-app-pub-9338360370095787~9565586151</string>-->
    <!--<string name="feed_detail_ad">ca-app-pub-9338360370095787/4995785750</string>-->

    <string-array name="tabs">
        <item>All</item>
        <item>Unread</item>
        <item>Archived</item>
    </string-array>

    <string name="empty_string" />
    <string name="loading_ads">Loading Ads...</string>


    <!-- Settings -->
    <string name="settings">Settings</string>

    <string name="pref_title_sync_frequency">Sync Frequency</string>
    <string name="pref_summary_sync_frequency">Set how often should be feeds downloaded</string>
    <string name="pref_default_value_sync_frequency">60</string>
    <string name="pref_sync_frequency_never">-1</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>@string/pref_default_value_sync_frequency</item>
        <item>180</item>
        <item>360</item>
        <item>@string/pref_sync_frequency_never</item>
    </string-array>

    <string name="pref_title_delete_frequency">Delete Frequency</string>
    <string name="pref_summary_delete_frequency">Set how long should be unarchived feeds kept in storage</string>
    <string name="pref_default_value_delete_frequency">3</string>
    <string-array name="pref_delete_frequency_titles">
        <item>1 day</item>
        <item>3 days</item>
        <item>7 days</item>
    </string-array>
    <string-array name="pref_delete_frequency_values">
        <item>1</item>
        <item>@string/pref_default_value_delete_frequency</item>
        <item>7</item>
    </string-array>

    <string name="pref_title_data_usage">Data Usage</string>
    <string name="pref_summary_data_usage">Download data only on Wifi</string>
    <string name="title_activity_notification_result">NotificationResultActivity</string>
</resources>
